<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Menü</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">1447134645529199</string>
    <string name="title_activity_search_page">Restaurant search</string>
    <string name="home_page">Welcome to NSFW\'s application! \nPlease search for a restaurant below.</string>
    <string name="fblogout">fblogout</string>
    <string name="Facebook_Logout">Facebook Logout</string>
    <string name="Favorites_Button">Favorites</string>
    <string name="search_hint">Search restaurants</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_restaurant">Restaurant Information</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="title_activity_favorites_page">Your Favorite Restaurants</string>
    <string name="title_activity_home_page">App Home Page</string>
    <string name="favorites_hint">Search favorites</string>
    <string name="Search_Button">Search</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="dish_name">Dish Name</string>
    <string name="user_photos">User Photos</string>
    <string name="nutrition">Nutrition</string>
    <string name="reviews">Reviews</string>
    <string name="rev_Preview">Review Preview</string>
    <string name="title_activity_add_picture">Add Picture</string>
    <string name="title_activity_add_review">Add Review</string>
    <string name="title_activity_view_pictures">View Pictures</string>
    <string name="Logo">Logo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <!-- <string name="action_forot_password">Recover lost password</string> -->
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_picture_view">Expanded Photo</string>
    <string name="action_forgot_password">Forgot Password?</string>

</resources>
