<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Cse110.controller.DishActivity"
    tools:ignore="MergeRootFrame" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/dish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="29dp"
                    android:text="@string/dish_name"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>

            <com.parse.ParseImageView
                android:id="@+id/ownerPic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/nutrition"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_alignLeft="@+id/nutrition"
                android:layout_below="@+id/dish"
                android:layout_marginTop="32dp"
                android:text="@string/price"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RatingBar
                    android:id="@+id/ratingBar1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stepSize="0.5" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@+id/ratingBar1"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_button"
                    android:onClick="SubmitRating"
                    android:text="Rate!" />
                
                <TextView
                android:id="@+id/userRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/ratingBar1" />
            </RelativeLayout>
			  
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/description"
                android:layout_marginTop="46dp"
                android:text="@string/user_photos"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/picbutton"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/custom_button"
                    android:onClick="UploadPicture"
                    android:text="Upload"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/v"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_button"
                    android:text="View Pictures" 
                    android:onClick = "viewPictures"/>

            </RelativeLayout>

            <Gallery
                android:id="@+id/gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
		

            <TextView
                android:id="@+id/nutrition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_alignLeft="@+id/dish"
                android:layout_below="@+id/price"
                android:layout_marginTop="14dp"
                android:text="@string/nutrition"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="50dp"
                android:text="@string/reviews"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/addbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white"
                android:background="@drawable/custom_button"
                android:layout_marginBottom="41dp"
                android:onClick="addReview"
                android:text="Add Review" />

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="match_parent"
                android:layout_height="500dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical" >

                    <ListView
                        android:id="@+id/reviewsList"
                        android:layout_width="match_parent"
                        android:layout_height="494dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true" >
                    </ListView>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>